// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages view passenger types should render correctly when groups and individual passenger types 1`] = `
<BaseLayout
  description="View and edit your passenger types."
  showNavigation={true}
  title="Passenger types"
>
  <div
    className="govuk-width-container"
  >
    <main
      className="govuk-main-wrapper"
    >
      <div
        className="govuk-grid-row"
      >
        <div
          className="govuk-grid-column-one-third"
        >
          <SubNavigation />
        </div>
        <div
          className="govuk-grid-column-two-thirds"
        >
          <h1
            className="govuk-heading-xl"
          >
            Passenger types
          </h1>
          <p
            className="govuk-body"
          >
            Define age range and required proof documents of your passengers as well as passenger groups
          </p>
          <IndividualPassengerTypes
            deleteActionHandler={[Function]}
            singlePassengerTypes={
              Array [
                Object {
                  "name": "Regular Child",
                  "passengerType": Object {
                    "ageRangeMax": "16",
                    "ageRangeMin": "5",
                    "passengerType": "child",
                    "proofDocuments": Array [
                      "studentCard",
                    ],
                  },
                },
              ]
            }
          />
          <PassengerTypeGroups
            passengerTypeGroups={
              Array [
                Object {
                  "companions": Array [
                    Object {
                      "maxNumber": "2",
                      "passengerType": "adult",
                    },
                    Object {
                      "ageRangeMax": "16",
                      "ageRangeMin": "4",
                      "maxNumber": "1",
                      "passengerType": "child",
                      "proofDocuments": Array [
                        "studentCard",
                      ],
                    },
                  ],
                  "maxGroupSize": "3",
                  "name": "family group",
                },
              ]
            }
          />
          <DeleteConfirmationPopup
            cancelActionHandler={[Function]}
            csrfToken=""
            isGroup={false}
            isVisible={false}
            passengerTypeName=""
          />
        </div>
      </div>
    </main>
  </div>
</BaseLayout>
`;

exports[`pages view passenger types should render correctly when no individual or group passenger types 1`] = `
<BaseLayout
  description="View and edit your passenger types."
  showNavigation={true}
  title="Passenger types"
>
  <div
    className="govuk-width-container"
  >
    <main
      className="govuk-main-wrapper"
    >
      <div
        className="govuk-grid-row"
      >
        <div
          className="govuk-grid-column-one-third"
        >
          <SubNavigation />
        </div>
        <div
          className="govuk-grid-column-two-thirds"
        >
          <h1
            className="govuk-heading-xl"
          >
            Passenger types
          </h1>
          <p
            className="govuk-body"
          >
            Define age range and required proof documents of your passengers as well as passenger groups
          </p>
          <NoIndividualPassengerTypes />
          <NoPassengerTypeGroups />
          <DeleteConfirmationPopup
            cancelActionHandler={[Function]}
            csrfToken=""
            isGroup={false}
            isVisible={false}
            passengerTypeName=""
          />
        </div>
      </div>
    </main>
  </div>
</BaseLayout>
`;

exports[`pages view passenger types should render correctly when only individual passenger types 1`] = `
<BaseLayout
  description="View and edit your passenger types."
  showNavigation={true}
  title="Passenger types"
>
  <div
    className="govuk-width-container"
  >
    <main
      className="govuk-main-wrapper"
    >
      <div
        className="govuk-grid-row"
      >
        <div
          className="govuk-grid-column-one-third"
        >
          <SubNavigation />
        </div>
        <div
          className="govuk-grid-column-two-thirds"
        >
          <h1
            className="govuk-heading-xl"
          >
            Passenger types
          </h1>
          <p
            className="govuk-body"
          >
            Define age range and required proof documents of your passengers as well as passenger groups
          </p>
          <IndividualPassengerTypes
            deleteActionHandler={[Function]}
            singlePassengerTypes={
              Array [
                Object {
                  "name": "Regular Child",
                  "passengerType": Object {
                    "ageRangeMax": "16",
                    "ageRangeMin": "5",
                    "passengerType": "child",
                    "proofDocuments": Array [
                      "studentCard",
                    ],
                  },
                },
              ]
            }
          />
          <NoPassengerTypeGroups />
          <DeleteConfirmationPopup
            cancelActionHandler={[Function]}
            csrfToken=""
            isGroup={false}
            isVisible={false}
            passengerTypeName=""
          />
        </div>
      </div>
    </main>
  </div>
</BaseLayout>
`;

exports[`pages view passenger types should render correctly when only passenger type groups 1`] = `
<BaseLayout
  description="View and edit your passenger types."
  showNavigation={true}
  title="Passenger types"
>
  <div
    className="govuk-width-container"
  >
    <main
      className="govuk-main-wrapper"
    >
      <div
        className="govuk-grid-row"
      >
        <div
          className="govuk-grid-column-one-third"
        >
          <SubNavigation />
        </div>
        <div
          className="govuk-grid-column-two-thirds"
        >
          <h1
            className="govuk-heading-xl"
          >
            Passenger types
          </h1>
          <p
            className="govuk-body"
          >
            Define age range and required proof documents of your passengers as well as passenger groups
          </p>
          <NoIndividualPassengerTypes />
          <PassengerTypeGroups
            passengerTypeGroups={
              Array [
                Object {
                  "companions": Array [
                    Object {
                      "maxNumber": "2",
                      "passengerType": "adult",
                    },
                    Object {
                      "ageRangeMax": "16",
                      "ageRangeMin": "4",
                      "maxNumber": "1",
                      "minNumber": "0",
                      "passengerType": "child",
                      "proofDocuments": Array [
                        "studentCard",
                      ],
                    },
                  ],
                  "maxGroupSize": "3",
                  "name": "family group",
                },
              ]
            }
          />
          <DeleteConfirmationPopup
            cancelActionHandler={[Function]}
            csrfToken=""
            isGroup={false}
            isVisible={false}
            passengerTypeName=""
          />
        </div>
      </div>
    </main>
  </div>
</BaseLayout>
`;
